public/styles/global.css
  /* barlow-regular - latin */
    @font-face {
      font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
      font-family: "Barlow";
      font-style: normal;
      font-weight: 400;
      src: url("/fonts/barlow-v12-latin-regular.eot"); /* IE9 Compat Modes */
      src:
        url("/fonts/barlow-v12-latin-regular.eot?#iefix")
          format("embedded-opentype"),
        /* IE6-IE8 */ url("/fonts/barlow-v12-latin-regular.woff2")
          format("woff2"),
        /* Super Modern Browsers */ url("/fonts/barlow-v12-latin-regular.woff")
          format("woff"),
        /* Modern Browsers */ url("/fonts/barlow-v12-latin-regular.ttf")
          format("truetype"),
        /* Safari, Android, iOS */
          url("/fonts/barlow-v12-latin-regular.svg#Barlow") format("svg"); /* Legacy iOS */
    }
    /* barlow-italic - latin */
    @font-face {
      font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
      font-family: "Barlow";
      font-style: italic;
      font-weight: 400;
      src: url("/fonts/barlow-v12-latin-italic.eot"); /* IE9 Compat Modes */
      src:
        url("/fonts/barlow-v12-latin-italic.eot?#iefix")
          format("embedded-opentype"),
        /* IE6-IE8 */ url("/fonts/barlow-v12-latin-italic.woff2")
          format("woff2"),
        /* Super Modern Browsers */ url("/fonts/barlow-v12-latin-italic.woff")
          format("woff"),
        /* Modern Browsers */ url("/fonts/barlow-v12-latin-italic.ttf")
          format("truetype"),
        /* Safari, Android, iOS */
          url("/fonts/barlow-v12-latin-italic.svg#Barlow") format("svg"); /* Legacy iOS */
    }
    /* barlow-regular - latin */
    @font-face {
      font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
      font-family: "Barlow";
      font-style: normal;
      font-weight: 400;
      src: url("../fonts/barlow-v12-latin-regular.eot"); /* IE9 Compat Modes */
      src:
        url("../fonts/barlow-v12-latin-regular.eot?#iefix")
          format("embedded-opentype"),
        /* IE6-IE8 */ url("../fonts/barlow-v12-latin-regular.woff2")
          format("woff2"),
        /* Super Modern Browsers */
          url("../fonts/barlow-v12-latin-regular.woff") format("woff"),
        /* Modern Browsers */ url("../fonts/barlow-v12-latin-regular.ttf")
          format("truetype"),
        /* Safari, Android, iOS */
          url("../fonts/barlow-v12-latin-regular.svg#Barlow") format("svg"); /* Legacy iOS */
    }
    /* barlow-700 - latin */
    @font-face {
      font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
      font-family: "Barlow";
      font-style: normal;
      font-weight: 700;
      src: url("../fonts/barlow-v12-latin-700.eot"); /* IE9 Compat Modes */
      src:
        url("../fonts/barlow-v12-latin-700.eot?#iefix")
          format("embedded-opentype"),
        /* IE6-IE8 */ url("../fonts/barlow-v12-latin-700.woff2") format("woff2"),
        /* Super Modern Browsers */ url("../fonts/barlow-v12-latin-700.woff")
          format("woff"),
        /* Modern Browsers */ url("../fonts/barlow-v12-latin-700.ttf")
          format("truetype"),
        /* Safari, Android, iOS */
          url("../fonts/barlow-v12-latin-700.svg#Barlow") format("svg"); /* Legacy iOS */
    }
    /* barlow-700italic - latin */
    @font-face {
      font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
      font-family: "Barlow";
      font-style: italic;
      font-weight: 700;
      src: url("../fonts/barlow-v12-latin-700italic.eot"); /* IE9 Compat Modes */
      src:
        url("../fonts/barlow-v12-latin-700italic.eot?#iefix")
          format("embedded-opentype"),
        /* IE6-IE8 */ url("../fonts/barlow-v12-latin-700italic.woff2")
          format("woff2"),
        /* Super Modern Browsers */
          url("../fonts/barlow-v12-latin-700italic.woff") format("woff"),
        /* Modern Browsers */ url("../fonts/barlow-v12-latin-700italic.ttf")
          format("truetype"),
        /* Safari, Android, iOS */
          url("../fonts/barlow-v12-latin-700italic.svg#Barlow") format("svg"); /* Legacy iOS */
    }

    :root {

      --sidebar-width: 260px;
      --font-secondary: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
      --font-mono: "Cascadia Mono", sans-serif;
      --background-color: #f2f0e9;
      --text-color: #0b1733;
      --second-text-color: #3f434d;
      --border-color: #333028;
      --red: #d30e03;
      --orange: #ef5f1f;
      --pink: #c80e84;
      --green: #48a71e;
      --light-blue: #1b81b4;
      --purple: #5741ac;
      --blue: #393f85;
      --accent-color: var(--purple);
      --gradient-color: linear-gradient(
        45deg,
        hsl(3deg 97% 45%) 0%,
        hsl(348deg 100% 45%) 7%,
        hsl(341deg 100% 45%) 14%,
        hsl(334deg 100% 44%) 21%,
        hsl(326deg 100% 41%) 29%,
        hsl(328deg 97% 42%) 36%,
        hsl(357deg 71% 53%) 43%,
        hsl(29deg 100% 39%) 50%,
        hsl(50deg 100% 31%) 57%,
        hsl(82deg 100% 31%) 64%,
        hsl(150deg 100% 32%) 71%,
        hsl(180deg 100% 30%) 79%,
        hsl(200deg 100% 39%) 86%,
        hsl(210deg 100% 41%) 93%,
        hsl(252deg 45% 46%) 100%
      );

      --size-step-0: 1rem;
      --size-step-1: 1.25rem;
      --size-step-2: 1.56rem;
      --size-step-3: 1.95rem;
      --size-step-4: 2.43rem;
    }

    .dark-mode {
      --background-color: #181b3a;
      --text-color: #f2f0e9;
      --second-text-color: #c9c6d1;
      --accent-color: var(--pink);
      --red: #db5c55;
      --pink: #c76399;
      --blue: #548ab7;
      --purple: #867cc0;
      --border-color: #333028;
    }
/* ... */

